unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/CMPL123QMS__Internal_Audit__c.object-meta.xml
<CustomObject>
    <label>Internal Audit</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Internal Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>