unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Account__c.field-meta.xml
<CustomField>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audits (Account)</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </CustomField>