unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Actual_Audit_End_Date__c.field-meta.xml
<CustomField>
        <fullName>Actual_Audit_End_Date__c</fullName>
        <label>Actual Audit End Date</label>
        <type>Date</type>
    </CustomField>