unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Audit_Plan__c.field-meta.xml
<CustomField>
        <fullName>Audit_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Plan</label>
        <referenceTo>Audit_Plan__c</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </CustomField>