unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Audit_Result__c.field-meta.xml
<CustomField>
        <fullName>Audit_Result__c</fullName>
        <label>Audit Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Minor Findings</fullName>
                </value>
                <value>
                    <fullName>Moderate Findings</fullName>
                </value>
                <value>
                    <fullName>Major Findings</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>