unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Audit_Sub_Type__c.field-meta.xml
<CustomField>
        <fullName>Audit_Sub_Type__c</fullName>
        <label>Audit Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Audit</fullName>
                </value>
                <value>
                    <fullName>System Audit</fullName>
                </value>
                <value>
                    <fullName>Vendor Audit</fullName>
                </value>
                <value>
                    <fullName>Clinical Operation</fullName>
                </value>
                <value>
                    <fullName>Medical Writing</fullName>
                </value>
                <value>
                    <fullName>Study Management</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Statistics</fullName>
                </value>
                <value>
                    <fullName>Pre-clinical Study Protocol</fullName>
                </value>
                <value>
                    <fullName>Pre-clinical Study Report</fullName>
                </value>
                <value>
                    <fullName>Study Conduct</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>CRO</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>