unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Audit_Title__c.field-meta.xml
<CustomField>
        <fullName>Audit_Title__c</fullName>
        <label>Audit Title</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>