unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Audit_Type__c.field-meta.xml
<CustomField>
        <fullName>Audit_Type__c</fullName>
        <label>Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMP</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>GLP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>