unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__Actual_Audit_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Actual_Audit_Date__c</fullName>
        <label>Actual Audit Date</label>
        <type>Date</type>
    </CustomField>