unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__Applicable_Standards_and_Clauses__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Applicable_Standards_and_Clauses__c</fullName>
        <label>Applicable Standards and Clauses</label>
        <length>500</length>
        <type>LongTextArea</type>
    </CustomField>