unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__Audit_Objectives_Planned__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Audit_Objectives_Planned__c</fullName>
        <label>Audit Objectives - Planned</label>
        <length>500</length>
        <type>LongTextArea</type>
    </CustomField>