unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__Audit_Scope_Actual__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Audit_Scope_Actual__c</fullName>
        <label>Audit Scope - Actual</label>
        <length>500</length>
        <type>LongTextArea</type>
    </CustomField>