unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__Audit_Summary__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Audit_Summary__c</fullName>
        <label>Audit Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>