unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__Lead_Auditor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Lead_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Auditor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Audits</relationshipLabel>
        <relationshipName>Internal_Audits</relationshipName>
        <type>Lookup</type>
    </CustomField>