unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__Manager_of_Area_to_be_Audited__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Manager_of_Area_to_be_Audited__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager of Area to be Audited</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Audits (Manager of Area to be Audited)</relationshipLabel>
        <relationshipName>Internal_Audits1</relationshipName>
        <type>Lookup</type>
    </CustomField>