unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__QS_Process_or_Element__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__QS_Process_or_Element__c</fullName>
        <label>QS Process or Element</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>