unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__SOPs__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__SOPs__c</fullName>
        <label>SOPs</label>
        <type>TextArea</type>
    </CustomField>