unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/CMPL123QMS__Suggestions_for_Improvement__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Suggestions_for_Improvement__c</fullName>
        <label>Suggestions for Improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>