unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Initial_Approval_Complete__c.field-meta.xml
<CustomField>
        <fullName>Initial_Approval_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Approval Complete?</label>
        <type>Checkbox</type>
    </CustomField>