unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Is_Audit_Approved__c.field-meta.xml
<CustomField>
        <fullName>Is_Audit_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Audit Approved?</label>
        <type>Checkbox</type>
    </CustomField>