unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Next_Audit_Date__c.field-meta.xml
<CustomField>
        <fullName>Next_Audit_Date__c</fullName>
        <label>Next Audit Date</label>
        <type>Date</type>
    </CustomField>