unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Planned_Audit_End_Date__c.field-meta.xml
<CustomField>
        <fullName>Planned_Audit_End_Date__c</fullName>
        <label>Planned Audit End Date</label>
        <type>Date</type>
    </CustomField>