unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Recommendations__c.field-meta.xml
<CustomField>
        <fullName>Recommendations__c</fullName>
        <label>Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>