unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Response_Summary__c.field-meta.xml
<CustomField>
        <fullName>Response_Summary__c</fullName>
        <label>Response Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>