unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
        <fullName>Risk_Score__c</fullName>
        <label>Risk Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>