unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/recordTypes/External.recordType-meta.xml
<RecordType>
        <fullName>External</fullName>
        <active>true</active>
        <label>External</label>
    </RecordType>