unpackaged/main/default/objects/CMPL123QMS__Internal_Audit__c/listViews/CMPL123QMS__All.listView-meta.xml
<ListView>
        <fullName>CMPL123QMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Audit_Scope__c</columns>
        <columns>CMPL123QMS__Lead_Auditor__c</columns>
        <columns>CMPL123QMS__QS_Process_or_Element__c</columns>
        <columns>CMPL123QMS__Planned_Audit_Date__c</columns>
        <columns>CMPL123QMS__Actual_Audit_Date__c</columns>
        <columns>CMPL123QMS__Manager_of_Area_to_be_Audited__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>